# learn-esp32

./: README.md
sessions/02-Environment Setup/main/: blink_example_main.c
sessions/03-Components/01-Before Architecture/: sdkconfig.old
sessions/03-Components/01-Before Architecture/components/swc1/: CMakeLists.txt  swc1.c
sessions/03-Components/01-Before Architecture/main/: blink_example_main.c
sessions/03-Components/01-BeforeArchitecture/: sdkconfig
sessions/03-Components/01-BeforeArchitecture/main/: CMakeLists.txt
sessions/03-Components/02-AfterArchitecture/: ESP32_CONNECT_BOARD.drawio
sessions/03-Components/02-AfterArchitecture/components/on_board_leds/: CMakeLists.txt  on_board_leds.c
sessions/03-Components/02-AfterArchitecture/components/status_report/: CMakeLists.txt  status_report.c
sessions/03-Components/02-AfterArchitecture/components/swc1/: CMakeLists.txt  swc1.c
sessions/03-Components/02-AfterArchitecture/main/: blink_example_main.c
sessions/04-Multi-Application/01-session/: sdkconfig  sdkconfig.old
sessions/04-Multi-Application/01-session/components/app/: CMakeLists.txt  Kconfig  app.c  app_hbridge.c  app_keypad.c  app_leds.c  app_relays.c
sessions/04-Multi-Application/01-session/components/app/include/: app.h  app_hbridge.h  app_keypad.h  app_leds.h  app_relays.h
sessions/04-Multi-Application/01-session/main/: blink_example_main.c
sessions/04-Multi-Application/02-lcd_test/main/: APPLICATION.c  APPLICATION.h  CMakeLists.txt  COMMON_MACROS.h  DIO.c  DIO.h  LCD.c  LCD.h  STD_TYPES.h  lcd_test.c
(+5 files in other folders)
